fixing entry-content spacing

--- a/src/less/_site-layout.less
+++ b/src/less/_site-layout.less
@@ -98,19 +98,6 @@
   padding: 5rem 5%;
 }
 
-@media (min-width: 980px) {
-  .entry-content > :first-child {
-    padding-top: 5rem;
-  }
-}
-
-.post-list .entry-content,
-.single .entry-content {
-  & > :first-child {
-    padding-top: 0;
-  }
-}
-
 .no-sidebar {
   .main-content-row {
     max-width: auto;
